    - **Snooze Exception**: Snooze mode keeps the handset silent (no busy tone) to allow "putting the phone aside".
- **Performance**:
    - **Non-Blocking Audio**: Converted "Time Speaking" logic to a Queue system. The main loop no longer freezes while the device speaks dates or confirmations.
    - **Reduced Logging**: Stripped debug output for cleaner serial terminal behavior.
- **Licensing**:
    - Applied **PolyForm Noncommercial License 1.0.0** to the repository (see [README.md](README.md)).

## v0.7.1-beta (2026-01-18) - "The Voice Feedback Update"
- **Enhanced Voice Navigation**:
    - **Base Speaker confirmation** when canceling timers or deleting manual alarms.
    - Added dedicated voice prompts for "Timer Cancelled" and "Alarm Deleted".
- **Hardware Controls**:
    - **Timer Cancel**: Lifting the handset instantly cancels any running timer (with voice confirmation).
    - **Manual Alarm Delete**: Holding the extra button **while lifting the handset** deletes the manual alarm.
- **Dial Codes**:
    - **Dial 90**: Explicit code to toggle ALL alarms.
    - **Dial 91**: Explicit code to toggle "Skip Next Alarm".

## v0.7.0-beta (2026-01-18) - "The Robustness Update"
- **Audio Multithreading**: Moved audio decoding to dedicated Core 0 task. Prevents stuttering during Web UI usage or heavy WiFi traffic.
- **Fail-Safe Features**:
    - **NVS Persistence**: Alarms now survive device reboots.
    - **RTC Support**: Added DS3231 support for timekeeping during internet outages.
    - **Fallback Tone**: Synthesized alarm tone generated if SD card files are missing.
- **Detailed Announcements**: Extended `speakTime()` to announce Weekday, Date, Month, Year, and DST status.
- **Improved Scripts**: Generator script now creates localized calendar audio assets.

## v0.6.0-beta (2026-01-18) - "The Streamlined Specialist"
- **Hardware Cleanup (GPS Removal)**:
    - Removed all dependencies on GNSS/GPS hardware (u-blox M10).